flowc/tests/fixtures/check_e141_missing_arg.flow
type User = { id: string }

tool create_user(email: string, locale: string) -> User
  effect deterministic

flow demo(User) -> User {
  u = create_user(email: it.id)
  u
}
